# Craft

./: .gitignore  .kateproject  CMakeLists.txt  Makefile  fragment.sl  main.c  vertex.sl
glfw/src/: glx_platform.h
go/: main.go  modern.go
shaders/: block_fragment.glsl  block_vertex.glsl  line_fragment.glsl  line_vertex.glsl  shadow_fragment.glsl
src/: cube.c  cube.h  main.c  meshing.c  meshing.h
